--- a/styles/banner.css
+++ b/styles/banner.css
@@ -35,3 +35,16 @@
     background: url("../assets/Pesquisa.svg") no-repeat ;
 }
 
+@media screen and (min-width: 1024px){
+    .banner__titulo{
+        font-size: 36px;    
+    }
+
+    .banner__pesquisa{
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 5rem;
+    }
+}
