media query - footer

--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@
     --fonte-principal: "Poppins";
     --azul: #002F52;
     --fonte-secundaria: "Josefin Sans";
-    --preto: #000000
+    --preto: #000000;
+    --cinza: #474646;
+    --cinza-claro: #858585;
 }
 
 body{
