--- a/styles/rodape.css
+++ b/styles/rodape.css
@@ -6,3 +6,41 @@ hr{
     background-color: var(--cor-secundaria);
     padding: 1rem;
 }
+
+.rodape__lista{
+    display: none;
+}
+
+
+@media screen and (min-width: 1024px) {
+    
+    .rodape{
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .rodape__lista__titulo{
+        font-size: 14px;
+        color: var(--cinza-claro);
+    }
+
+    .rodape__lista{
+        display: block;
+    }
+
+    .rodape__titulo{
+        font-size: 24px;
+    }
+
+    .rodape__lista__item{
+        display: flex;
+        align-items: center;
+        margin: 0.6rem 0;
+    }
+
+    .rodape__lista__link{
+        color: var(--cinza);
+        text-decoration: none;
+        margin-left: 0.6rem;
+    }
+}
