media query desktop

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -48,3 +48,17 @@
         background-position: 5rem;
     }
 }
+
+@media screen and (min-width: 1728px){
+    .banner__pesquisa{
+        width: 38%;
+    }
+
+    .banner__pesquisa::placeholder{
+        background-position: 12rem;
+    }
+
+    .banner{
+        padding: 6rem 0;
+    }
+}
