--- a/styles/topicos.css
+++ b/styles/topicos.css
@@ -43,4 +43,8 @@
     .topicos{
         padding: 3rem 30vw;
     }
+
+    .topicos__link:hover{
+        background-color: var(--azul-degrade);
+    }
 }
